# libxdiff

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  XDiffConfig.cmake  biicode.cmake  xdiff.def
examples/: CMakeLists.txt  apply_patch.cxx  create_patch.cxx
include/: xinclude.h
